--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -14,13 +14,15 @@
         <script src="./../src/system/Main.js"></script>
         <script src="./../src/scope/Alias.js"></script>
         <script src="./../src/utils/Vector.js"></script>
+        <script src="./../src/entities/Object/Bullets.js"></script>
+        <script src="./../src/entities/Object/Bullet.js"></script>
         <script src="./../src/entities/Entity.js"></script>
         <script src="./../src/entities/zombies/Zombie.js"></script>
         <script src="./../src/entities/players/Player.js"></script>
         <script src="./../src/entities/players/Players.js"></script>
         <script src="./../src/entities/zombies/Zombies.js"></script>
         <script src="./../src/entities/Entities.js"></script>
-        
+        <script src="./../src/entities/Object/Obstacle.js"></script>
         <script src="./../src/scene/menu/Menu.js"></script>
         <script src="./../src/scene/game/Game.js"></script>
 
