--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -10,6 +10,11 @@
         <!-- APPLICATION SOURCE CODE -->
         <script src="./../src/scope/Manifest.js"></script>
         <script src="./../src/data/manifest/Resources.js"></script>
+        <script src="./../src/scene/Scenes.js"></script>
+        <script src="./../src/scene/menu/objects/Button.js"></script>
+        <script src="./../src/scene//game/GameOver.js"></script>
+        <script src="./../src/HealthBar.js"></script>
+        <script src="./../src/Background.js"></script>
         <script src="./../src/scene/game/Game.js"></script>
         <script src="./../src/system/Main.js"></script>
         <script src="./../src/scope/Alias.js"></script>
@@ -23,6 +28,7 @@
         <script src="./../src/entities/zombies/Zombies.js"></script>
         <script src="./../src/entities/Entities.js"></script>
         <script src="./../src/entities/Object/Obstacle.js"></script>
+        <script src="./../src/scene/menu/HowtoPlay.js"></script>
         <script src="./../src/scene/menu/Menu.js"></script>
         <script src="./../src/scene/game/Game.js"></script>
 
